--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- SEO -->
     <title>Jiyeon&#39;s Portfolio</title>
-    <meta
-      name="description"
-      content="Portfolio for Jiyeon Han, a calligrapher as well as full-stack developer"
-    />
+    <meta name="description" content="Jiyeon's Portfolio" />
     <meta name="author" content="Jiyeon Han" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <!-- Open Graph Data -->
@@ -17,10 +14,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="website url" />
     <meta property="og:image" content="image url" />
-    <meta
-      property="og:description"
-      content="Portfolio for Jiyeon Han, a calligrapher as well as full-stack developer"
-    />
+    <meta property="og:description" content="Jiyeon's Portfolio" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -38,5 +32,37 @@
     <!-- JavaScript -->
     <script src="src/main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <!-- Header -->
+    <header>
+      <div name="logo">
+        <img src="images/favicon.ico" alt="logo" />
+        <h1><a href="#">Jiyeon</a></h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#web-dev">Web Developemnt</a></li>
+          <li><a href="#calligraphy">Calligraphy</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <!-- Main -->
+    <main>
+      <!-- Home -->
+      <section id="home"></section>
+      <!-- About -->
+      <section id="about"></section>
+      <!-- Web Development -->
+      <section id="web-dev"></section>
+      <!-- Calligraphy -->
+      <section id="calligraphy"></section>
+      <!-- Arrow Up -->
+      <aside></aside>
+    </main>
+    <!-- Footer -->
+    <footer id="contact"></footer>
+  </body>
 </html>
