--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
     <!-- Main -->
     <main>
       <!-- Home -->
-      <section id="home"></section>
+      <section id="home">
+        <img src="images/profile.png" alt="Jiyeon's profile" />
+        <h2>Hello I am Jiyeon</h2>
+        <p>a web developer, a calligrapher &#38; a life explorer!</p>
+        <button><a href="#contact">Contact Me</a></button>
+      </section>
       <!-- About -->
       <section id="about"></section>
       <!-- Web Development -->
