--- a/index.html
+++ b/index.html
@@ -59,7 +59,54 @@
         <button><a href="#contact">Contact Me</a></button>
       </section>
       <!-- About -->
-      <section id="about"></section>
+      <section id="about">
+        <h2>About me</h2>
+        <ul>
+          <li>
+            <i class="fa-solid fa-laptop-code"></i>
+            <p>Web developer</p>
+            <p>skilled in front-end and back-end</p>
+          </li>
+          <li>
+            <i class="fa-solid fa-pen-nib"></i>
+            <p>Calligrapher</p>
+            <p>specialized in modern calligraphy</p>
+          </li>
+          <li>
+            <i class="fa-solid fa-book"></i>
+            <p>Patent attorney</p>
+            <p>admitted to Korean patent bar in 2017</p>
+            <p>6+ years in chemistry and materials fields</p>
+          </li>
+          <li>
+            <i class="fa-solid fa-flask"></i>
+            <p>Researcher</p>
+            <p>developed skin care products for improving skin color</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <img
+              src="images/edu/knou-logo.png"
+              alt="Logo of Korean National Open University"
+            />
+            <div>
+              <p>Bachelor of Science in Computer Science</p>
+              <p>Korean National Open University&#124;Korea</p>
+            </div>
+          </li>
+          <li>
+            <img
+              src="images/edu/uw-logo.png"
+              alt="Logo of University of Wisconsin, Madison"
+            />
+            <div>
+              <p>Masters of Science in Chemistry</p>
+              <p>University of Wisconsin, Madison&#124;USA</p>
+            </div>
+          </li>
+        </ul>
+      </section>
       <!-- Web Development -->
       <section id="web-dev"></section>
       <!-- Calligraphy -->
