--- a/index.html
+++ b/index.html
@@ -178,7 +178,143 @@
         </div>
       </section>
       <!-- Calligraphy -->
-      <section id="calligraphy"></section>
+      <section id="calligraphy">
+        <h2>Calligraphy</h2>
+        <p>Projects</p>
+        <ul>
+          <li>
+            <button>All<span>12</span></button>
+          </li>
+          <li>
+            <button>Hand Lettering<span>7</span></button>
+          </li>
+          <li>
+            <button>Digital Fonts<span>5</span></button>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <img
+              src="images/projects-calligraphy/card-i-love-you.webp"
+              alt="card i love you"
+            />
+            <div>
+              <h3>I love you</h3>
+              <p>a cute valentine card</p>
+            </div>
+          </li>
+          <li>
+            <img
+              src="images/projects-calligraphy/card-thank-you.webp"
+              alt="card thank you"
+            />
+            <div>
+              <h3>Thank you</h3>
+              <p>a simple gratitude card</p>
+            </div>
+          </li>
+          <li>
+            <img
+              src="images/projects-calligraphy/card-calligram-love-yourself-first.webp"
+              alt="card love yourself first"
+            />
+            <div>
+              <h3>Love yourself first</h3>
+              <p>a heart calligram card</p>
+            </div>
+          </li>
+          <li>
+            <img
+              src="images/projects-calligraphy/quote-storms-dont-last-forever.webp"
+              alt="quote storms don't last forever"
+            />
+            <div>
+              <h3>Storms don&#39;t last forever</h3>
+              <p>an elegant encouraging quote</p>
+            </div>
+          </li>
+          <li>
+            <img
+              src="images/projects-calligraphy/quote-stronger.webp"
+              alt="quote what doesn't kill you makes you stronger"
+            />
+            <div>
+              <h3>What doesn&#39;t kill you makes you stronger</h3>
+              <p>a flourished quote</p>
+            </div>
+          </li>
+          <li>
+            <img
+              src="images/projects-calligraphy/quote-calligram-live-life-love.webp"
+              alt="quote live the life you love and love the life you live"
+            />
+            <div>
+              <h3>Live the life you love &#38; Love the life you live</h3>
+              <p>an inspiring quote looped in flower calligram</p>
+            </div>
+          </li>
+          <li>
+            <img
+              src="images/projects-calligraphy/calligram-fly-me-to-the-moon.webp"
+              alt="calligram fly me to the moon and let me play amongst the stars"
+            />
+            <div>
+              <h3>Fly me to the moon and let me play amongst the stars</h3>
+              <p>beautiful crescent and star calligrams</p>
+            </div>
+          </li>
+          <li>
+            <img
+              src="images/projects-calligraphy/font-stardust.webp"
+              alt="font stardust"
+            />
+            <div>
+              <h3>Font Stardust</h3>
+              <p>an easy going script font</p>
+            </div>
+          </li>
+          <li>
+            <img
+              src="images/projects-calligraphy/font-gratifying-november.webp"
+              alt="font gratifying november"
+            />
+            <div>
+              <h3>Font Gratifying November</h3>
+              <p>an all capital sans serif font</p>
+            </div>
+          </li>
+          <li>
+            <img
+              src="images/projects-calligraphy/font-teapot-sans.webp"
+              alt="font teapot sans"
+            />
+            <div>
+              <h3>Font Teapot Sans</h3>
+              <p>a slender curved sans serif font</p>
+            </div>
+          </li>
+          <li>
+            <img
+              src="images/projects-calligraphy/font-rooftop.webp"
+              alt="font rooftop"
+            />
+            <div>
+              <h3>Font Rooftop</h3>
+              <p>a simple monoline font</p>
+            </div>
+          </li>
+          <li>
+            <img
+              src="images/projects-calligraphy/font-florist.webp"
+              alt="font florist"
+            />
+            <div>
+              <h3>Font Florist</h3>
+              <p>a modern calligraphy font</p>
+            </div>
+          </li>
+        </ul>
+      </section>
       <!-- Arrow Up -->
       <aside></aside>
     </main>
