--- a/index.html
+++ b/index.html
@@ -316,7 +316,11 @@
         </ul>
       </section>
       <!-- Arrow Up -->
-      <aside></aside>
+      <aside>
+        <a href="#home" title="back to top">
+          <i class="fa-solid fa-arrow-up"></i>
+        </a>
+      </aside>
     </main>
     <!-- Footer -->
     <footer id="contact"></footer>
