--- a/index.html
+++ b/index.html
@@ -323,6 +323,30 @@
       </aside>
     </main>
     <!-- Footer -->
-    <footer id="contact"></footer>
+    <footer id="contact">
+      <h2>Contact me</h2>
+      <p></p>
+      <ul>
+        <li>
+          <a
+            href="https://github.com/jhan88"
+            target="_blank"
+            title="link to my github"
+          >
+            <i class="fa-brands fa-github"></i>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://linkedin.com/in/jiyeon-han-83b0b4154"
+            target="_blank"
+            title="link to my linkedin profile"
+          >
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+        </li>
+      </ul>
+      <p>Copyright©2024 Jiyeon Han All rights reserved</p>
+    </footer>
   </body>
 </html>
