--- a/index.html
+++ b/index.html
@@ -63,10 +63,20 @@
     <main>
       <!-- Home -->
       <section id="home">
-        <img src="images/profile.png" alt="Jiyeon's profile" />
-        <h2>Hello I am Jiyeon</h2>
-        <p>a web developer, a calligrapher &#38; a life explorer!</p>
-        <button><a href="#contact">Contact Me</a></button>
+        <img
+          class="home__profile"
+          src="images/profile.png"
+          alt="Jiyeon's profile"
+        />
+        <h2 class="home__title">
+          Hello I am <strong class="home__title--strong">Jiyeon</strong>
+        </h2>
+        <p class="home__description">
+          a web developer, a calligrapher &#38; a life explorer!
+        </p>
+        <button class="home__contact">
+          <a class="home__contact--strong" href="#contact">Contact Me</a>
+        </button>
       </section>
       <!-- About -->
       <section id="about">
