--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         </button>
       </section>
       <!-- About -->
-      <section id="about">
-        <h2>About me</h2>
+      <section id="about" class="section">
+        <h2 class="section__title">About me</h2>
         <ul>
           <li>
             <i class="fa-solid fa-laptop-code"></i>
@@ -128,9 +128,9 @@
         </ul>
       </section>
       <!-- Web Development -->
-      <section id="web-dev">
+      <section id="web-dev" class="section">
         <div>
-          <h2>Web Developement</h2>
+          <h2 class="section__title">Web Developement</h2>
           <section>
             <h3>Coding Skills</h3>
             <ul>
@@ -198,8 +198,8 @@
         </div>
       </section>
       <!-- Calligraphy -->
-      <section id="calligraphy">
-        <h2>Calligraphy</h2>
+      <section id="calligraphy" class="section">
+        <h2 class="section__title">Calligraphy</h2>
         <p>Projects</p>
         <ul>
           <li>
@@ -343,9 +343,9 @@
       </aside>
     </main>
     <!-- Footer -->
-    <footer id="contact">
-      <h2>Contact me</h2>
-      <p></p>
+    <footer id="contact" class="section">
+      <h2 class="section__title">Contact me</h2>
+      <p class="section__description"></p>
       <ul>
         <li>
           <a
