--- a/index.html
+++ b/index.html
@@ -79,56 +79,70 @@
         </button>
       </section>
       <!-- About -->
-      <section id="about" class="section">
+      <section id="about" class="section max-container">
         <h2 class="section__title">About me</h2>
-        <ul>
-          <li>
-            <i class="fa-solid fa-laptop-code"></i>
-            <p>Web developer</p>
-            <p>skilled in front-end and back-end</p>
+        <ul class="work">
+          <li class="work__item">
+            <i class="fa-solid fa-laptop-code work__icon"></i>
+            <p class="work__title">Web developer</p>
+            <p class="work__description">skilled in front-end and back-end</p>
           </li>
-          <li>
-            <i class="fa-solid fa-pen-nib"></i>
-            <p>Calligrapher</p>
-            <p>specialized in modern calligraphy</p>
+          <li class="work__item">
+            <i class="fa-solid fa-pen-nib work__icon"></i>
+            <p class="work__title">Calligrapher</p>
+            <p class="work__description">specialized in modern calligraphy</p>
           </li>
-          <li>
-            <i class="fa-solid fa-book"></i>
-            <p>Patent attorney</p>
-            <p>admitted to Korean patent bar in 2017</p>
-            <p>6+ years in chemistry and materials fields</p>
+          <li class="work__item">
+            <i class="fa-solid fa-book work__icon"></i>
+            <p class="work__title">Patent attorney</p>
+            <p class="work__description">
+              admitted to Korean patent bar in 2017
+            </p>
+            <p class="work__description">
+              6+ years in chemistry and materials fields
+            </p>
           </li>
-          <li>
-            <i class="fa-solid fa-flask"></i>
-            <p>Researcher</p>
-            <p>developed skin care products for improving skin color</p>
+          <li class="work__item">
+            <i class="fa-solid fa-flask work__icon"></i>
+            <p class="work__title">Researcher</p>
+            <p class="work__description">
+              developed skin care products for improving skin color
+            </p>
           </li>
         </ul>
-        <ul>
-          <li>
+        <ul class="education">
+          <li class="education__item">
             <img
+              class="education__logo"
               src="images/edu/knou-logo.png"
               alt="Logo of Korean National Open University"
             />
             <div>
-              <p>Bachelor of Science in Computer Science</p>
-              <p>Korean National Open University&#124;Korea</p>
+              <p class="education__degree">
+                Bachelor of Science in Computer Science
+              </p>
+              <p class="education__school">
+                Korean National Open University&#124;Korea
+              </p>
             </div>
           </li>
-          <li>
+          <li class="education__item">
             <img
+              class="education__logo"
               src="images/edu/uw-logo.png"
               alt="Logo of University of Wisconsin, Madison"
             />
             <div>
-              <p>Masters of Science in Chemistry</p>
-              <p>University of Wisconsin, Madison&#124;USA</p>
+              <p class="education__degree">Masters of Science in Chemistry</p>
+              <p class="education__school">
+                University of Wisconsin, Madison&#124;USA
+              </p>
             </div>
           </li>
         </ul>
       </section>
       <!-- Web Development -->
-      <section id="web-dev" class="section">
+      <section id="web-dev" class="section max-container">
         <div>
           <h2 class="section__title">Web Developement</h2>
           <section>
@@ -198,7 +212,7 @@
         </div>
       </section>
       <!-- Calligraphy -->
-      <section id="calligraphy" class="section">
+      <section id="calligraphy" class="section max-container">
         <h2 class="section__title">Calligraphy</h2>
         <p>Projects</p>
         <ul>
