--- a/index.html
+++ b/index.html
@@ -142,73 +142,73 @@
         </ul>
       </section>
       <!-- Web Development -->
-      <section id="web-dev" class="section max-container">
-        <div>
+      <section id="web-dev" class="section">
+        <div class="max-container">
           <h2 class="section__title">Web Developement</h2>
-          <section>
-            <h3>Coding Skills</h3>
-            <ul>
-              <li>
-                <i class="fa-brands fa-html5"></i>
-                <p>Front-end</p>
-                <p>HTML, CSS, JavaScript, TypeScript, React</p>
-              </li>
-              <li>
-                <i class="fa-solid fa-server"></i>
-                <p>Back-end</p>
-                <p>JavaScript, Node&#46;js, Go</p>
-              </li>
-            </ul>
-          </section>
-          <section>
-            <h3>Tools</h3>
-            <ul>
-              <li>Visual Studio Code</li>
-              <li>Git</li>
-              <li>GitHub</li>
-            </ul>
-          </section>
-          <section>
-            <h3>Projects</h3>
-            <ul>
-              <li>
-                <img
-                  src="images/projects-web-dev/habit-tracker.webp"
-                  alt="habit tracker"
-                />
-                <div>
-                  <a href="#" target="_blank">
-                    <p>Habbit Tracker</p>
-                    <p>HTML CSS React TypeScript Go</p>
-                  </a>
-                </div>
-              </li>
-              <li>
-                <img
-                  src="images/projects-web-dev/periodic-table.webp"
-                  alt="periodic table"
-                />
-                <div>
-                  <a href="#" target="_blank">
-                    <p>Periodic Table</p>
-                    <p>HTML CSS JavaScript Node.js</p>
-                  </a>
-                </div>
-              </li>
-              <li>
-                <img
-                  src="images/projects-web-dev/font-preview.webp"
-                  alt="font preview"
-                />
-                <div>
-                  <a href="#" target="_blank">
-                    <p>Font Preview</p>
-                    <p>HTML CSS TypeScript Node.js</p>
-                  </a>
-                </div>
-              </li>
-            </ul>
-          </section>
+          <div class="web-dev__grid">
+            <section class="web-dev__skills">
+              <h3 class="web-dev__title">Coding Skills</h3>
+              <ul>
+                <li>
+                  <p>Front-end</p>
+                  <p>HTML, CSS, JavaScript, TypeScript, React</p>
+                </li>
+                <li>
+                  <p>Back-end</p>
+                  <p>JavaScript, Node&#46;js, Go</p>
+                </li>
+              </ul>
+            </section>
+            <section class="web-dev__tools">
+              <h3 class="web-dev__title">Tools</h3>
+              <ul>
+                <li>Visual Studio Code</li>
+                <li>Git</li>
+                <li>GitHub</li>
+              </ul>
+            </section>
+            <section class="web-dev__projects">
+              <h3 class="web-dev__title">Projects</h3>
+              <ul>
+                <li>
+                  <img
+                    src="images/projects-web-dev/habit-tracker.webp"
+                    alt="habit tracker"
+                  />
+                  <div>
+                    <a href="#" target="_blank">
+                      <p>Habbit Tracker</p>
+                      <p>HTML CSS React TypeScript Go</p>
+                    </a>
+                  </div>
+                </li>
+                <li>
+                  <img
+                    src="images/projects-web-dev/periodic-table.webp"
+                    alt="periodic table"
+                  />
+                  <div>
+                    <a href="#" target="_blank">
+                      <p>Periodic Table</p>
+                      <p>HTML CSS JavaScript Node.js</p>
+                    </a>
+                  </div>
+                </li>
+                <li>
+                  <img
+                    src="images/projects-web-dev/font-preview.webp"
+                    alt="font preview"
+                  />
+                  <div>
+                    <a href="#" target="_blank">
+                      <p>Font Preview</p>
+                      <p>HTML CSS TypeScript Node.js</p>
+                    </a>
+                  </div>
+                </li>
+              </ul>
+            </section>
+          </div>
         </div>
       </section>
       <!-- Calligraphy -->
