CSS-WebDev-Skills

--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
           <div class="web-dev__grid">
             <section class="web-dev__skills">
               <h3 class="web-dev__title">Coding Skills</h3>
-              <ul>
-                <li>
-                  <p>Front-end</p>
+              <ul class="coding-skills">
+                <li class="coding-skills__item">
+                  <p class="coding-skills__title">Front-end</p>
                   <p>HTML, CSS, JavaScript, TypeScript, React</p>
                 </li>
-                <li>
-                  <p>Back-end</p>
+                <li class="coding-skills__item">
+                  <p class="coding-skills__title">Back-end</p>
                   <p>JavaScript, Node&#46;js, Go</p>
                 </li>
               </ul>
