CSS-WebDev-Projects

--- a/index.html
+++ b/index.html
@@ -169,42 +169,51 @@
             </section>
             <section class="web-dev__projects">
               <h3 class="web-dev__title">Projects</h3>
-              <ul>
-                <li>
+              <ul class="web-dev__projects__list">
+                <li class="web-dev__projects__item">
                   <img
                     src="images/projects-web-dev/habit-tracker.webp"
                     alt="habit tracker"
+                    class="web-dev__project__image"
                   />
-                  <div>
-                    <a href="#" target="_blank">
-                      <p>Habbit Tracker</p>
-                      <p>HTML CSS React TypeScript Go</p>
-                    </a>
-                  </div>
+                  <a href="#" target="_blank">
+                    <div class="web-dev__project__metadata">
+                      <p class="web-dev__project__title">Habbit Tracker</p>
+                      <p class="web-dev__project__desription">
+                        HTML CSS React TypeScript Go
+                      </p>
+                    </div>
+                  </a>
                 </li>
-                <li>
+                <li class="web-dev__projects__item">
                   <img
                     src="images/projects-web-dev/periodic-table.webp"
                     alt="periodic table"
+                    class="web-dev__project__image"
                   />
-                  <div>
-                    <a href="#" target="_blank">
-                      <p>Periodic Table</p>
-                      <p>HTML CSS JavaScript Node.js</p>
-                    </a>
-                  </div>
+                  <a href="#" target="_blank">
+                    <div class="web-dev__project__metadata">
+                      <p class="web-dev__project__title">Periodic Table</p>
+                      <p class="web-dev__project__desription">
+                        HTML CSS JavaScript Node.js
+                      </p>
+                    </div>
+                  </a>
                 </li>
-                <li>
+                <li class="web-dev__projects__item">
                   <img
                     src="images/projects-web-dev/font-preview.webp"
                     alt="font preview"
+                    class="web-dev__project__image"
                   />
-                  <div>
-                    <a href="#" target="_blank">
-                      <p>Font Preview</p>
-                      <p>HTML CSS TypeScript Node.js</p>
-                    </a>
-                  </div>
+                  <a href="#" target="_blank">
+                    <div class="web-dev__project__metadata">
+                      <p class="web-dev__project__title">Font Preview</p>
+                      <p class="web-dev__project__desription">
+                        HTML CSS TypeScript Node.js
+                      </p>
+                    </div>
+                  </a>
                 </li>
               </ul>
             </section>
