CSS-Calligraphy-Category

--- a/index.html
+++ b/index.html
@@ -223,16 +223,22 @@
       <!-- Calligraphy -->
       <section id="calligraphy" class="section max-container">
         <h2 class="section__title">Calligraphy</h2>
-        <p>Projects</p>
-        <ul>
+        <h3 class="calligraphy__title">Projects</h3>
+        <ul class="categories__list">
           <li>
-            <button>All<span>12</span></button>
+            <button class="category category--selected">
+              All<span class="category__count">12</span>
+            </button>
           </li>
           <li>
-            <button>Hand Lettering<span>7</span></button>
+            <button class="category">
+              Hand Lettering<span class="category__count">7</span>
+            </button>
           </li>
           <li>
-            <button>Digital Fonts<span>5</span></button>
+            <button class="category">
+              Digital Fonts<span class="category__count">5</span>
+            </button>
           </li>
         </ul>
         <ul>
