--- a/index.html
+++ b/index.html
@@ -411,37 +411,41 @@
         </ul>
       </section>
       <!-- Arrow Up -->
-      <aside>
-        <a href="#home" title="back to top">
+      <aside class="arrow-up">
+        <a href="#home" title="back to top" class="arrow-up__link">
           <i class="fa-solid fa-arrow-up"></i>
         </a>
       </aside>
     </main>
     <!-- Footer -->
     <footer id="contact" class="section">
-      <h2 class="section__title">Contact me</h2>
-      <p class="section__description"></p>
-      <ul>
-        <li>
-          <a
-            href="https://github.com/jhan88"
-            target="_blank"
-            title="link to my github"
-          >
-            <i class="fa-brands fa-github"></i>
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://linkedin.com/in/jiyeon-han-83b0b4154"
-            target="_blank"
-            title="link to my linkedin profile"
-          >
-            <i class="fa-brands fa-linkedin"></i>
-          </a>
-        </li>
-      </ul>
-      <p>Copyright©2024 Jiyeon Han All rights reserved</p>
+      <div class="max-container">
+        <h2 class="section__title">Contact me</h2>
+        <p class="section__description"></p>
+        <ul class="contact__links__list">
+          <li>
+            <a
+              href="https://github.com/jhan88"
+              target="_blank"
+              title="link to my github"
+              class="contact__link"
+            >
+              <i class="fa-brands fa-github"></i>
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://linkedin.com/in/jiyeon-han-83b0b4154"
+              target="_blank"
+              title="link to my linkedin profile"
+              class="contact__link"
+            >
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+          </li>
+        </ul>
+        <p>Copyright©2024 Jiyeon Han All rights reserved</p>
+      </div>
     </footer>
   </body>
 </html>
