--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <h1 class="header__logo__title"><a href="#">Jiyeon</a></h1>
       </div>
       <nav class="header__nav">
+        <button class="header__toggle">
+          <i class="fa-solid fa-bars"></i>
+        </button>
         <ul class="header__menu">
           <li><a class="header__menu__item active" href="#home">Home</a></li>
           <li><a class="header__menu__item active" href="#about">About</a></li>
