JS-Calligraphy-Projects
FIX JS-Calligraphy-Projects

--- a/index.html
+++ b/index.html
@@ -232,23 +232,23 @@
         <h3 class="calligraphy__title">Projects</h3>
         <ul class="categories__list">
           <li>
-            <button class="category category--selected">
+            <button class="category category--selected" data-filter="all">
               All<span class="category__count">12</span>
             </button>
           </li>
           <li>
-            <button class="category">
+            <button class="category" data-filter="hand-lettering">
               Hand Lettering<span class="category__count">7</span>
             </button>
           </li>
           <li>
-            <button class="category">
+            <button class="category" data-filter="digital-font">
               Digital Fonts<span class="category__count">5</span>
             </button>
           </li>
         </ul>
         <ul class="calligraphy__projects__list">
-          <li class="calligraphy__projects__item">
+          <li class="calligraphy__projects__item" data-type="hand-lettering">
             <img
               src="images/projects-calligraphy/card-i-love-you.webp"
               alt="card i love you"
@@ -261,7 +261,7 @@
               </p>
             </div>
           </li>
-          <li class="calligraphy__projects__item">
+          <li class="calligraphy__projects__item" data-type="hand-lettering">
             <img
               src="images/projects-calligraphy/card-thank-you.webp"
               alt="card thank you"
@@ -274,7 +274,7 @@
               </p>
             </div>
           </li>
-          <li class="calligraphy__projects__item">
+          <li class="calligraphy__projects__item" data-type="hand-lettering">
             <img
               src="images/projects-calligraphy/card-calligram-love-yourself-first.webp"
               alt="card love yourself first"
@@ -287,7 +287,7 @@
               </p>
             </div>
           </li>
-          <li class="calligraphy__projects__item">
+          <li class="calligraphy__projects__item" data-type="hand-lettering">
             <img
               src="images/projects-calligraphy/quote-storms-dont-last-forever.webp"
               alt="quote storms don't last forever"
@@ -302,7 +302,7 @@
               </p>
             </div>
           </li>
-          <li class="calligraphy__projects__item">
+          <li class="calligraphy__projects__item" data-type="hand-lettering">
             <img
               src="images/projects-calligraphy/quote-stronger.webp"
               alt="quote what doesn't kill you makes you stronger"
@@ -317,7 +317,7 @@
               </p>
             </div>
           </li>
-          <li class="calligraphy__projects__item">
+          <li class="calligraphy__projects__item" data-type="hand-lettering">
             <img
               src="images/projects-calligraphy/quote-calligram-live-life-love.webp"
               alt="quote live the life you love and love the life you live"
@@ -332,7 +332,7 @@
               </p>
             </div>
           </li>
-          <li class="calligraphy__projects__item">
+          <li class="calligraphy__projects__item" data-type="hand-lettering">
             <img
               src="images/projects-calligraphy/calligram-fly-me-to-the-moon.webp"
               alt="calligram fly me to the moon and let me play amongst the stars"
@@ -347,7 +347,7 @@
               </p>
             </div>
           </li>
-          <li class="calligraphy__projects__item">
+          <li class="calligraphy__projects__item" data-type="digital-font">
             <img
               src="images/projects-calligraphy/font-stardust.webp"
               alt="font stardust"
@@ -360,7 +360,7 @@
               </p>
             </div>
           </li>
-          <li class="calligraphy__projects__item">
+          <li class="calligraphy__projects__item" data-type="digital-font">
             <img
               src="images/projects-calligraphy/font-gratifying-november.webp"
               alt="font gratifying november"
@@ -375,7 +375,7 @@
               </p>
             </div>
           </li>
-          <li class="calligraphy__projects__item">
+          <li class="calligraphy__projects__item" data-type="digital-font">
             <img
               src="images/projects-calligraphy/font-teapot-sans.webp"
               alt="font teapot sans"
@@ -388,7 +388,7 @@
               </p>
             </div>
           </li>
-          <li class="calligraphy__projects__item">
+          <li class="calligraphy__projects__item" data-type="digital-font">
             <img
               src="images/projects-calligraphy/font-rooftop.webp"
               alt="font rooftop"
@@ -401,7 +401,7 @@
               </p>
             </div>
           </li>
-          <li class="calligraphy__projects__item">
+          <li class="calligraphy__projects__item" data-type="digital-font">
             <img
               src="images/projects-calligraphy/font-florist.webp"
               alt="font florist"
