--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <!-- JavaScript -->
     <script type="module" src="src/main.js" defer></script>
     <script type="module" src="src/calligraphyProjects.js" defer></script>
+    <script type="module" src="src/activeMenu.js" defer></script>
   </head>
   <body>
     <!-- Header -->
@@ -45,20 +46,20 @@
           <i class="fa-solid fa-bars"></i>
         </button>
         <ul class="header__menu">
-          <li><a class="header__menu__item active" href="#home">Home</a></li>
-          <li><a class="header__menu__item active" href="#about">About</a></li>
           <li>
-            <a class="header__menu__item active" href="#web-dev"
-              >Web Developemnt</a
-            >
+            <a class="header__menu__item" href="#home">Home</a>
           </li>
           <li>
-            <a class="header__menu__item active" href="#calligraphy"
-              >Calligraphy</a
-            >
+            <a class="header__menu__item" href="#about">About</a>
           </li>
           <li>
-            <a class="header__menu__item active" href="#contact">Contact</a>
+            <a class="header__menu__item" href="#web-dev">Web Developemnt</a>
+          </li>
+          <li>
+            <a class="header__menu__item" href="#calligraphy">Calligraphy</a>
+          </li>
+          <li>
+            <a class="header__menu__item" href="#contact">Contact</a>
           </li>
         </ul>
       </nav>
