--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <!-- Open Graph Data -->
     <meta property="og:title" content="Jiyeon's Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="website url" />
-    <meta property="og:image" content="image url" />
+    <meta property="og:url" content="https://jhan88.github.io/portfolio/" />
+    <meta
+      property="og:image"
+      content="https://jhan88.github.io/portfolio/images/og.webp"
+    />
     <meta property="og:description" content="Jiyeon's Portfolio" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
